--- a/package.json
+++ b/package.json
@@ -1,62 +1,41 @@
 {
-  "_args": [
-    [
-      {
-        "raw": "ng2-image-gallery-fixed@^1.0.7",
-        "scope": null,
-        "escapedName": "ng2-image-gallery-fixed",
-        "name": "ng2-image-gallery-fixed",
-        "rawSpec": "^1.0.7",
-        "spec": ">=1.0.7 <2.0.0",
-        "type": "range"
-      },
-      "/home/twinfreaks/webdev/ss-project/client"
-    ]
-  ],
-  "_from": "ng2-image-gallery-fixed@>=1.0.7 <2.0.0",
-  "_id": "ng2-image-gallery-fixed@1.0.7",
-  "_inCache": true,
-  "_location": "/ng2-image-gallery-fixed",
-  "_nodeVersion": "6.9.5",
-  "_npmOperationalInternal": {
-    "host": "packages-18-east.internal.npmjs.com",
-    "tmp": "tmp/ng2-image-gallery-fixed-1.0.7.tgz_1490376462381_0.8355864081531763"
+  "name": "ng2-image-gallery",
+  "version": "0.3.13",
+  "description": "Basic Angular 2 image gallery",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bergben/ng2-image-gallery.git"
   },
-  "_npmUser": {
-    "name": "twinfreaks",
-    "email": "vitalyar7@gmail.com"
+  "license": "MIT",
+  "module": "./dist/ng2-image-gallery.js",
+  "main": "./dist/bundles/ng2-image-gallery.umd.js",
+  "typings": "./dist/ng2-image-gallery.d.ts",
+  "scripts": {
+    "transpile": "ngc",
+    "package": "rollup -c",
+    "minify": "uglifyjs dist/bundles/ng2-image-gallery.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ng2-image-gallery.umd.min.js",
+    "build": "npm run transpile && npm run package && npm run minify"
   },
-  "_npmVersion": "3.10.10",
-  "_phantomChildren": {},
-  "_requested": {
-    "raw": "ng2-image-gallery-fixed@^1.0.7",
-    "scope": null,
-    "escapedName": "ng2-image-gallery-fixed",
-    "name": "ng2-image-gallery-fixed",
-    "rawSpec": "^1.0.7",
-    "spec": ">=1.0.7 <2.0.0",
-    "type": "range"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/ng2-image-gallery-fixed/-/ng2-image-gallery-fixed-1.0.7.tgz",
-  "_shasum": "7c4eb5d50b4301aaeac8ebc02fad7a71b60eb718",
-  "_shrinkwrap": null,
-  "_spec": "ng2-image-gallery-fixed@^1.0.7",
-  "_where": "/home/twinfreaks/webdev/ss-project/client",
   "author": {
-    "name": "Benedikt Berger, fixed by Vitalii Yaremchuk",
+    "name": "Benedikt Berger",
     "email": "benedikt.berger@live.de"
   },
-  "bugs": {
-    "url": "https://github.com/twinfreaks/ng2-image-gallery/issues"
-  },
+  "keywords": [
+    "angular",
+    "angular2",
+    "image",
+    "gallery",
+    "lightbox",
+    "photo"
+  ],
   "dependencies": {
     "@angular/material": "^2.0.0-beta.2",
     "ng2-dragula": "^1.2.2"
   },
-  "description": "Basic Angular 2 image gallery, fixed",
+  "peerDependencies": {
+    "@angular/core": "^2.0.0",
+    "@angular/common": "^2.0.0"
+  },
   "devDependencies": {
     "@angular/common": "2.4.8",
     "@angular/compiler": "^2.4.8",
@@ -77,46 +56,8 @@
     "uglify-js": "^2.7.5",
     "zone.js": "^0.7.7"
   },
-  "directories": {},
-  "dist": {
-    "shasum": "7c4eb5d50b4301aaeac8ebc02fad7a71b60eb718",
-    "tarball": "https://registry.npmjs.org/ng2-image-gallery-fixed/-/ng2-image-gallery-fixed-1.0.7.tgz"
+  "bugs": {
+    "url": "https://github.com/bergben/ng2-image-gallery/issues"
   },
-  "homepage": "https://github.com/bergben/ng2-image-gallery#readme",
-  "keywords": [
-    "angular",
-    "angular2",
-    "image",
-    "gallery",
-    "lightbox",
-    "photo"
-  ],
-  "license": "MIT",
-  "main": "./dist/bundles/ng2-image-gallery.umd.js",
-  "maintainers": [
-    {
-      "name": "twinfreaks",
-      "email": "vitalyar7@gmail.com"
-    }
-  ],
-  "module": "./dist/ng2-image-gallery.js",
-  "name": "ng2-image-gallery-fixed",
-  "optionalDependencies": {},
-  "peerDependencies": {
-    "@angular/core": "^2.0.0",
-    "@angular/common": "^2.0.0"
-  },
-  "readme": "ERROR: No README data found!",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/twinfreaks/ng2-image-gallery.git"
-  },
-  "scripts": {
-    "build": "npm run transpile && npm run package && npm run minify",
-    "minify": "uglifyjs dist/bundles/ng2-image-gallery.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ng2-image-gallery.umd.min.js",
-    "package": "rollup -c",
-    "transpile": "ngc"
-  },
-  "typings": "./dist/ng2-image-gallery.d.ts",
-  "version": "1.0.7"
+  "homepage": "https://github.com/bergben/ng2-image-gallery#readme"
 }
